# pk

./: Cargo.toml  README.md
src/: app.rs  diff.rs  git_diff_vim.rs  main.rs  patch.rs
src/app/: app_actions.rs  app_init.rs  app_loop.rs  aux_panels.rs  chat.rs  clipboard_utils.rs  config.rs  constants.rs  daemon.rs  editing.rs  file_panel.rs  git_actions.rs  git_diff_side.rs  git_ops.rs  git_panels.rs  help.rs  llm.rs  matching.rs  minimap.rs  mod.rs  palette.rs  search_panel.rs  split_view.rs  state.rs  status_bar.rs  toolbar.rs  types.rs
