[package]
name = "pk"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.29"
rfd = "0.15"
git2 = "0.19"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
arboard = "3.6.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
